k8s/manifests/model-api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-api
  template:
    metadata:
      labels:
        app: model-api
    spec:
      containers:
        - name: model-api
          image: ghcr.io/woosung142/model-api:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /models
              name: model-cache
      volumes:
        - name: model-cache
          emptyDir: {}
